updated whole repositories and directories with role spicification mechanism